# Mindforge

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  PRODUCT.md  README.md  pyproject.toml  render.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-openhands-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/phases/02-preset-template-center/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-agent-instantiation-orchestration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-REVIEW.md  (+1 more)
app/: __init__.py
app/backend/: __init__.py  main.py
app/data/: loops.json
app/model_control/: model_overrides.json  provider_overrides.json  rule_templates.json
app/model_registry/: catalog.yaml
app/presets/: code-engineering.yaml  code-review.yaml  default.yaml  doc-organize.yaml  paper-revision.yaml
design-variants/: frontend-design-luxury-console.html  impeccable-control-room.html  index.html  taste-strategy-minimum.html
frontend/: README.md  components.json  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
scripts/: run_local_demo.ps1
tests/: test_api_endpoints.py  test_file_context_service.py  test_model_control_and_rules.py  test_model_registry.py  test_openhands_adapter.py  test_orchestration_service.py  test_preset_system.py  test_repository_service.py  test_result_normalizer.py  test_task_service.py  test_web_e2e_smoke.py
(+122 files in other folders)
